# multid

./: README.md
dev/src/main/c++/: .gitignore  AUTHORS  INSTALL-MultiD  Makefile.am  autogen.sh  config.h.in~  configure.ac
dev/src/main/c++/graphGL/: Color.cc  Color.h  ColorArray.cc  ColorArray.h  CoordsArray.cc  CoordsArray.h  GL.h  GWin.cc  GWin.h  GWin2d.cc  GWin2d.h  GWin3d.cc  GWin3d.h  Graphics.h  Hook.cc  Hook.h  Makefile.am  MultiWin.cc  MultiWin.h  Prims.cc  Prims.h  PrimsPS.cc  PrimsPS.h  Raster.cc  Raster.h  SubWin.cc  SubWin.h  SubWin2d.cc  SubWin2d.h  SubWin3d.cc  SubWin3d.h  TODO  Trans.cc  Trans.h  Trans2d.cc  Trans2d.h  Trans3d.cc  Trans3d.h  Viewport.cc  Viewport.h  (+1 more)
dev/src/main/c++/graphGL/t/: Makefile.am  t_clip.cc
dev/src/main/c++/graphGL/t_graphGL/: t.cc  t_basic.cc  t_multi.cc
dev/src/main/c++/guiFLTK/: BUGS  Browser.cc  Browser.h  BrowserWin.cc  BrowserWin.h  Button.h  Canvas.cc  Canvas.h  CanvasWin.cc  CanvasWin.h  EventLoop.cc  EventLoop.h  Frame.cc  Frame.h  GUI.cc  GUI.h  Makefile.am  Panel.cc  Panel.h  PanelBrowser.cc  PanelBrowser.h  PanelButton.cc  PanelButton.h  PanelChoice.cc  PanelChoice.h  PanelDoubleText.cc  PanelDoubleText.h  PanelIntText.cc  PanelIntText.h  PanelMessage.cc  PanelMessage.h  PanelSlider.cc  PanelSlider.h  PanelText.cc  PanelText.h  PanelToggle.cc  PanelToggle.h  PanelWin.cc  PanelWin.h  Settings.cc  (+7 more)
dev/src/main/c++/guiFLTK/t/: ControlPanel.cc  Space2d.cc  Space2d.h  Space2dControl.cc
dev/src/main/c++/guiFLTK/t_guiFLTK/: ControlPanel.h  Makefile.am  Space2dControl.h  TextButton.cc  TextButton.h  Win.cc  Win.h  main.cc
dev/src/main/c++/jnicanvas/: Graphics.h  Graphics2DOpenGL.cpp  Graphics2DOpenGL.h
dev/src/main/c++/multid/: Arrow.cc  Arrow.h  Attributes.cc  Attributes.h  BUGS  Bond.cc  Bond.h  BoundingBox.cc  BoundingBox.h  CompositeMap.cc  CompositeMap.h  GeomObj.cc  GeomObj.h  GeomObjList.cc  GeomObjList.h  Makefile.am  Map.cc  Map.h  MultiPoint.cc  MultiPoint.h  MultiPolygon.cc  MultiPolygon.h  MultiPolyline.cc  MultiPolyline.h  Pairing.cc  Pairing.h  Plot2d.cc  Plot2d.h  Plot3d.cc  Plot3d.h  Point.cc  Point.h  Polygon.cc  Polygon.h  Polyline.cc  Polyline.h  Proj2dMap.cc  Proj2dMap.h  Proj3dMap.cc  Proj3dMap.h  (+22 more)
dev/src/main/c++/multid/CharPlot/: CharPlot.cc  CharPlot.h  Makefile.am  main.cc
dev/src/main/c++/multid/Display/: Display.cc  Display.h  Makefile.am  TODO  main.cc  t1  t2  t3  t4  t5  t6
dev/src/main/c++/multid/t/: BUGS  Euclid2.cc  Euclid3.cc  Makefile.am  Maps.h  Mobius.h  MobiusControl.h  README  main.cc
dev/src/main/c++/multid/t_multid/: Euclid2.h  Euclid3.cc  Euclid3.h  Maps.cc  Mobius.cc  Mobius.h  MobiusControl.cc  main.cc
dev/src/main/c++/wutil/: ADTADV.cc  ADTADV.h  BlockTri1.cc  BlockTri1.h  BlockTri2.cc  BlockTri2.h  BlockTri3.cc  BlockTri3.h  BlockTriN.ccP  BlockTriN.hP  DLList.ccP  DLList.hP  Extractable.cc  Extractable.h  Insertable.cc  Insertable.h  Inserter.cc  Inserter.h  IntArray.cc  IntArray.h  LList.ccP  LList.hP  Makefile.am  Pix.h  ScalarArray.h  TODO  Vector.cc  Vector.h  Vector1.cc  Vector1.h  Vector1Array.cc  Vector1Array.h  Vector2.cc  Vector2.h  Vector2Array.cc  Vector2Array.h  Vector3.cc  Vector3.h  Vector3Array.cc  Vector3Array.h  (+14 more)
dev/src/main/c++/wutil/t/: Vector4.cc  tBlockTri2low.cc  tVector1.cc  tVector3.cc  test_BlockTri2low  test_Vector4  test_label  tlabel.cc  tpolyroot.cc
dev/src/main/c++/wutil/t_wutil/: Makefile.am  Vector4.h  tADTADV.cc  tBlockTri2.cc  tBlockTri2per.cc  tVector2.cc  tVector4.cc  test_ADTADV  test_BlockTri2  test_BlockTri2per  test_Vector1  test_Vector2  test_Vector3  test_polyroot  test_trapfpe  ttrapfpe.cc
